--- a/src/Club/UserBundle/Resources/views/Member/show.html.twig
+++ b/src/Club/UserBundle/Resources/views/Member/show.html.twig
@@ -13,20 +13,16 @@
 
 {% block body %}
 
-<table class="table table-bordered">
+<dl class="dl-horizontal">
 {% if user.profile.profileEmail %}
-    <tr>
-        <th>{% trans %}Email{% endtrans %}</th>
-        <td>{{ user.profile.profileEmail.emailAddress }}</td>
-    </tr>
+        <dt>{% trans %}Email{% endtrans %}</dt>
+        <dd>{{ user.profile.profileEmail.emailAddress }}</dd>
     {% endif %}
     {% if user.profile.profilePhone %}
-    <tr>
-        <th>{% trans %}Phone{% endtrans %}</th>
-        <td>{{ user.profile.profilePhone.phoneNumber }}</td>
-    </tr>
+        <dt>{% trans %}Phone{% endtrans %}</dt>
+        <dd>{{ user.profile.profilePhone.phoneNumber }}</dd>
     {% endif %}
-</table>
+</dl>
 
 <h1>{% trans %}Activities{% endtrans %}</h1>
 {% include "ClubUserBundle:Dashboard:activities_table.html.twig" %}
