--- a/src/Club/UserBundle/Resources/views/User/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/User/index.html.twig
@@ -1,14 +1,7 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
 {% block pagenav %}
-<div class="navbar">
-    <div class="navbar-inner">
-        <ul class="nav">
-            <li><a href="{{ path('club_user_usersetting_index') }}">{% trans %}Settings{% endtrans %}</a></li>
-            <li><a href="{{ path('shop_subscription') }}">{% trans %}Subscriptions{% endtrans %}</a></li>
-        </ul>
-    </div>
-</div>
+{% include "ClubUserBundle:User:header.html.twig" %}
 {% endblock %}
 
 {% block body %}
