--- a/src/Club/ShopBundle/Resources/views/Subscription/pause_table.html.twig
+++ b/src/Club/ShopBundle/Resources/views/Subscription/pause_table.html.twig
@@ -4,9 +4,9 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Date</th>
-      <th>Return date</th>
-      <th>Remaining pause</th>
+      <th>{% trans %}Date{% endtrans %}</th>
+      <th>{% trans %}Return date{% endtrans %}</th>
+      <th>{% trans %}Remaining pause{% endtrans %}</th>
     </tr>
   </thead>
   <tbody>
@@ -24,11 +24,6 @@
     </tr>
     {% endfor %}
   </tbody>
-  <tfoot>
-    <tr>
-      <th colspan="3">&#160;</th>
-    </tr>
-  </tfoot>
 </table>
 
 
