--- a/src/Club/UserBundle/Resources/views/Location/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Location/index.html.twig
@@ -1,6 +1,6 @@
 {% extends "ClubUserBundle::base.html.twig" %}
 
-{% block header %}<div class="page-header"><h1>Location</h1></div>{% endblock %}
+{% block header %}<div class="page-header"><h1>{% trans %}Location{% endtrans %}</h1></div>{% endblock %}
 
 {% block body %}
 <p>{% trans %}If you want to change your current location, just click on the location you want to go to.{% endtrans %}</p>
