Removed all tfoot.

--- a/src/Club/DashboardBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/Club/DashboardBundle/Resources/views/Dashboard/index.html.twig
@@ -7,4 +7,7 @@
 <h2>{% trans %}Coming Activities{% endtrans %}</h2>
 {% include "ClubUserBundle:Dashboard:activities_table.html.twig" %}
 
+<h2>{% trans %}Recent Activities{% endtrans %}</h2>
+{% include "ClubUserBundle:Dashboard:activities_table.html.twig" with {'activities':recent} %}
+
 {% endblock %}
