--- a/src/Club/WelcomeBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Welcome/index.html.twig
@@ -27,4 +27,6 @@
 {% include "ClubWelcomeBundle:Welcome:blog.html.twig" %}
 {% endfor %}
 
+<a href="{{ path('club_welcome_blog_index') }}">&larr; Read older articles</a>
+
 {% endblock %}
