--- a/src/Club/WelcomeBundle/Resources/views/Blog/comment.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Blog/comment.html.twig
@@ -1,7 +1,9 @@
 {% extends "ClubWelcomeBundle::base.html.twig" %}
 
+{% block pagenav %}
+{% include "ClubWelcomeBundle:Blog:header.html.twig" %}
+{% endblock %}
+
 {% block body %}
-
 {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_welcome_blog_comment', {'blog_id':blog.id}), 'novalidate':true} %}
-
 {% endblock %}
