--- a/src/Club/InstallerBundle/Resources/views/Installer/confirm.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/confirm.html.twig
@@ -7,8 +7,10 @@
 
 <h4>{% trans %}Member number{% endtrans %}: 1</h4>
 
-<p>
-  <a href="{{ path('homepage') }}" class="btn">{% trans %}Go to ClubMaster{% endtrans %}</a>
-</p>
+<form class="form-horizontal">
+    <div class="form-actions">
+        <a href="{{ path('homepage') }}" class="btn btn-primary">{% trans %}Go to ClubMaster{% endtrans %}</a>
+    </div>
+</form>
 
 {% endblock %}
