Added a much better plan form page.

--- a/src/Club/BookingBundle/Resources/views/AdminPlan/edit.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminPlan/edit.html.twig
@@ -1,5 +1,11 @@
 {% extends "ClubBookingBundle::base.html.twig" %}
 
+{% block javascripts %}
+{% javascripts "@ClubBookingBundle/Resources/public/js/admin_plan.js" %}
+<script src="{{ asset_url }}" type="text/javascript"></script>
+{% endjavascripts %}
+{% endblock %}
+
 {% block body %}
-{% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_booking_adminplan_edit', {'id':plan.id})} %}
+{% include "ClubBookingBundle:AdminPlan:form.html.twig" with {'path':path('club_booking_adminplan_edit', {'id':plan.id})} %}
 {% endblock %}
