--- a/src/Club/BookingBundle/Resources/views/AdminPlanException/new.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminPlanException/new.html.twig
@@ -1,9 +1,5 @@
 {% extends "ClubBookingBundle::base.html.twig" %}
 
-{% block pagenav %}
-{% include "ClubBookingBundle:AdminPlan:header.html.twig" %}
-{% endblock %}
-
 {% block javascripts %}
 {% javascripts "@ClubBookingBundle/Resources/public/js/admin_plan.js" %}
 <script src="{{ asset_url }}" type="text/javascript"></script>
@@ -11,5 +7,5 @@
 {% endblock %}
 
 {% block body %}
-{% include "ClubBookingBundle:AdminPlan:form.html.twig" with {'path':path('club_booking_adminplan_edit', {'id':plan.id})} %}
+{% include "ClubBookingBundle:AdminPlan:form.html.twig" with {'path':path('club_booking_adminplan_new')} %}
 {% endblock %}
