Fixed that we can exclude the right time interval.

--- a/src/Club/BookingBundle/Resources/views/Overview/horizontal.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/horizontal.html.twig
@@ -65,6 +65,7 @@
                 <div id="bookings_plan"></div>
                 <input type="hidden" name="plan_id" value="" id="plan_id" />
                 <input type="hidden" name="field_id" value="" id="plan_field_id" />
+                <input type="hidden" name="time" value="" id="plan_time" />
                 </form>
 
                 <form method="POST" action="{{ path('club_booking_booking_viewteam') }}">
