--- a/src/Club/BookingBundle/Resources/views/Booking/viewPlan.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/viewPlan.html.twig
@@ -7,8 +7,7 @@
   <legend>{% trans %}Booking Information{% endtrans %}</legend>
   <div class="list">
     <p><label>{% trans %}Location{% endtrans %}</label>{{ field.location.locationName }}</p>
-    <p><label>{% trans %}Date{% endtrans %}</label>{{ date|club_date }}</p>
-    <p><label>{% trans %}Time{% endtrans %}</label>{{ plan.firstTime|club_time }} - {{ plan.endTime|club_time }}</p>
+    <p><label>{% trans %}Start date{% endtrans %}</label>{{ date|club_datetime }}</p>
     <p><label>{% trans %}Field{% endtrans %}</label>{{ field.name }}</p>
     <p><label>{% trans %}Plan{% endtrans %}</label>{{ plan.name }}</p>
 
@@ -26,7 +25,7 @@
 
         <p>{% trans %}Click here to cancel this booking plan.{% endtrans %}</p>
 
-        {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_booking_booking_exclude', {'id':plan.id,'date':date|date('Y-m-d')}), 'button':'Cancel'|trans} %}
+        {% include "ClubLayoutBundle:Default:form.html.twig" with {'path':path('club_booking_booking_exclude', {'id':plan.id,'datetime':date|date('Y-m-d H:i')}), 'button':'Cancel'|trans} %}
     </fieldset>
     {% endif %}
 
